sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:13: error: illegal start of simple expression
    else if(){
            ^AlgGnomeSort:18: error: ')' expected but '}' found.
  } while (i!=n)
  ^