sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var n= getNombreValeurs()
  var i = 0
  
  do{
    
    if(getValeur(i)>getValeur(i+1)){
      echange(i,i+1)
      i-=1
    }
    
    else if(){
      i+=1 
    }
    else if (i==0){i+=1}
         
  } while (i!=n)
}


